--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: unicode-org/cldr
-          path: cldr
+          path: ../cldr
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
