--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -13,13 +13,43 @@ jobs:
     name: In-source Instructions
     runs-on: ubuntu-latest
     steps:
+      - name: Debug
+        run: |
+          echo "pwd"
+          pwd
+          echo "ls -l"
+          ls -l
+        continue_on_error: true
       - name: Checkout Unicode Tools
         uses: actions/checkout@v2
+      - name: Debug
+        run: |
+          echo "pwd"
+          pwd
+          echo "ls -l"
+          ls -l
+        continue_on_error: true
       - name: Check out CLDR
         uses: actions/checkout@v2
         with:
           repository: unicode-org/cldr
           path: ../cldr
+      - name: Debug
+        run: |
+          echo "pwd"
+          pwd
+          echo "ls -l"
+          ls -l
+        continue_on_error: true
+      - name: Debug
+        run: |
+          echo  "cd .."
+          cd ..
+          echo "pwd"
+          pwd
+          echo "ls -l"
+          ls -l
+        continue_on_error: true
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
