--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -19,7 +19,7 @@ jobs:
           pwd
           echo "ls -l"
           ls -l
-        continue_on_error: true
+        continue-on-error: true
       - name: Checkout Unicode Tools
         uses: actions/checkout@v2
       - name: Debug
@@ -28,7 +28,7 @@ jobs:
           pwd
           echo "ls -l"
           ls -l
-        continue_on_error: true
+        continue-on-error: true
       - name: Check out CLDR
         uses: actions/checkout@v2
         with:
@@ -40,7 +40,7 @@ jobs:
           pwd
           echo "ls -l"
           ls -l
-        continue_on_error: true
+        continue-on-error: true
       - name: Debug
         run: |
           echo  "cd .."
@@ -49,7 +49,7 @@ jobs:
           pwd
           echo "ls -l"
           ls -l
-        continue_on_error: true
+        continue-on-error: true
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
