--- a/.github/workflows/build-jsp.yml
+++ b/.github/workflows/build-jsp.yml
@@ -43,13 +43,13 @@ jobs:
         -Dexec.mainClass="org.unicode.text.UCD.Main" -Dexec.args="version 15.0.0 build MakeUnicodeFiles"
         -pl unicodetools -DCLDR_DIR=${GITHUB_WORKSPACE}/cldr
         -DUNICODETOOLS_REPO_DIR=$(pwd) -DUVERSION=15.0.0
-        -DUNICODETOOLS_OUTPUT_DIR=$(pwd)/output
+        -DUNICODETOOLS_GEN_DIR=$(pwd)/output/Generated
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Run unicodetools tests
       run: >
         mvn -s .github/workflows/mvn-settings.xml -B test -pl unicodetools
-        -DCLDR_DIR=${GITHUB_WORKSPACE}/cldr -T 1C -Dparallel=classes -DUNICODETOOLS_REPO_DIR=$(pwd) -DUVERSION=15.0.0 -DUNICODETOOLS_OUTPUT_DIR=$(pwd)/output
+        -DCLDR_DIR=${GITHUB_WORKSPACE}/cldr -T 1C -Dparallel=classes -DUNICODETOOLS_REPO_DIR=$(pwd) -DUVERSION=15.0.0 -DUNICODETOOLS_GEN_DIR=$(pwd)/output/Generated
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Package JSPs
