jsp: fix C bidi pulldown
https://github.com/unicode-org/unicodetools/issues/129
(but was missed when that was closed)

--- a/UnicodeJsps/pom.xml
+++ b/UnicodeJsps/pom.xml
@@ -80,6 +80,13 @@
 			<version>1.4.01</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<!-- test -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
