jsp: add ucd copies during build
- shell script UnicodeJsps/update-bidic-ucd.sh to add files under src/main/resources/org/unicode/jsp/bidiref1/ucd
- run that script during automated build
- update docs UnicodeJsps/src/main/resources/org/unicode/jsp/bidiref1/ReadMe.txt for manual use

Fixes #201

--- a/.github/workflows/build-jsp.yml
+++ b/.github/workflows/build-jsp.yml
@@ -63,5 +63,5 @@ jobs:
         name: UnicodeJsps
         path: UnicodeJsps/target/UnicodeJsps.war
     - name: build docker image
-      run: cd UnicodeJsps && docker build .
+      run: cd UnicodeJsps && bash update-bidic-ucd.sh && docker build .
 
