test: refactor UnicodeJspsTest and  create unicodetools-testutils
- create module unicodetools-testutils for shared test utils
- move UnicodeJspsTest into UnicodeJsps/src/test/java

For: #146

test: more UnicodeJspsTest updates

For: #146

--- a/UnicodeJsps/pom.xml
+++ b/UnicodeJsps/pom.xml
@@ -85,6 +85,12 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
+		<!-- Pull this in only for tests -->
+		</dependency>
+
+		<dependency>
+			<groupId>org.unicode.unicodetools</groupId>
+			<artifactId>unicodetools-testutils</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
