--- a/unicodetools-testutils/pom.xml
+++ b/unicodetools-testutils/pom.xml
@@ -3,13 +3,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>unicodetools</artifactId>
+	<artifactId>unicodetools-testutils</artifactId>
 	<groupId>org.unicode.unicodetools</groupId>
-	<name>Unicode Tools</name>
+	<name>Unicode Test Utilities</name>
 
 	<version>1.0.0</version>
-
 	<packaging>jar</packaging>
+
 
 	<parent>
 		<groupId>org.unicode.unicodetools</groupId>
@@ -22,7 +22,6 @@
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j-for-cldr</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>utilities-for-cldr</artifactId>
@@ -31,17 +30,10 @@
 			<groupId>org.unicode.cldr</groupId>
 			<artifactId>cldr-code</artifactId>
 		</dependency>
-		<!-- test -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<!-- Pull this in only for tests -->
-		<dependency>
-			<groupId>org.unicode.unicodetools</groupId>
-			<artifactId>unicodetools-testutils</artifactId>
-			<scope>test</scope>
+			<!-- scope is not 'test' here, this is a test library -->
 		</dependency>
 	</dependencies>
 </project>
