--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -76,6 +76,24 @@ jobs:
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # TODO: file issue to uncomment, debug errors, and fix. Stacktrace observed:
+      # java.lang.AbstractMethodError: Receiver class org.unicode.cldr.util.props.UnicodePropertySymbolTable$ComparisonMatcher does not define or inherit an implementation of the resolved method 'abstract boolean matches(java.lang.Object)' of interface com.ibm.icu.dev.util.CollectionUtilities$ObjectMatcher.
+      #     at org.unicode.cldr.util.props.UnicodeProperty.getSet (UnicodeProperty.java:366)
+      #     at org.unicode.cldr.util.props.UnicodeProperty.getSet (UnicodeProperty.java:327)
+      # ... 
+      #
+      # https://github.com/unicode-org/unicodetools/blob/main/docs/idna.md
+      # - name: Run command - IDNA
+      #   run: |
+      #     # Confirm that the directory for the bin files exists
+      #     compgen -G "Generated/BIN"
+      #     # "Delete all the bin files" as per instructions
+      #     rm -rf Generated/BIN/*
+      #     # run GenerateIdna
+      #     MAVEN_OPTS="-ea" mvn -s .github/workflows/mvn-settings.xml exec:java -Dexec.mainClass="org.unicode.idna.GenerateIdna" -Dexec.args="" -pl unicodetools  -DCLDR_DIR=$(cd ../cldr ; pwd)  -DUNICODETOOLS_GEN_DIR=$(cd Generated; pwd)  -DUNICODETOOLS_REPO_DIR=$(pwd)  -DUVERSION=15.0.0
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   out-of-source-build:
     name: Out-of-source Instructions
     runs-on: ubuntu-latest
@@ -150,5 +168,24 @@ jobs:
       #     cd unicodetools/mine/src
       #     # invoke main() in class ...UCA.Main
       #     mvn -s .github/workflows/mvn-settings.xml exec:java -Dexec.mainClass="org.unicode.text.UCA.Main"  -Dexec.args="ICU"  -pl unicodetools  -DCLDR_DIR=$(cd ../../../cldr/mine/src ; pwd)  -DUNICODETOOLS_GEN_DIR=$(cd ../Generated ; pwd)  -DUNICODETOOLS_REPO_DIR=$(pwd)  -DUVERSION=15.0.0
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # TODO: file issue to uncomment, debug errors, and fix. Stacktrace observed:
+      # java.lang.AbstractMethodError: Receiver class org.unicode.cldr.util.props.UnicodePropertySymbolTable$ComparisonMatcher does not define or inherit an implementation of the resolved method 'abstract boolean matches(java.lang.Object)' of interface com.ibm.icu.dev.util.CollectionUtilities$ObjectMatcher.
+      #     at org.unicode.cldr.util.props.UnicodeProperty.getSet (UnicodeProperty.java:366)
+      #     at org.unicode.cldr.util.props.UnicodeProperty.getSet (UnicodeProperty.java:327)
+      # ... 
+      #
+      # https://github.com/unicode-org/unicodetools/blob/main/docs/idna.md
+      # - name: Run command - IDNA
+      #   run: |
+      #     cd unicodetools/mine/src
+      #     # Confirm that the directory for the bin files exists
+      #     compgen -G "../Generated/BIN"
+      #     # "Delete all the bin files" as per instructions
+      #     rm -rf ../Generated/BIN/*
+      #     # run GenerateIdna
+      #     mvn -s .github/workflows/mvn-settings.xml exec:java -Dexec.mainClass="org.unicode.idna.GenerateIdna"  -Dexec.args=""  -pl unicodetools  -DCLDR_DIR=$(cd ../../../cldr/mine/src ; pwd)  -DUNICODETOOLS_GEN_DIR=$(cd ../Generated ; pwd)  -DUNICODETOOLS_REPO_DIR=$(pwd)  -DUVERSION=15.0.0
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
