--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -9,8 +9,13 @@ on:
     - '*'
 
 jobs:
+
+  # Only run 1 or 2 commands for in-source build instructions, just to demonstrate
+  # what translating between an out-of-source build and an in-source build would
+  # would look like. Rely on out-of-source build steps as the canonical way to
+  # execute tools in CI and write corresponding documentation.
   in-source-build:
-    name: In-source Instructions
+    name: In-source Instructions (Examples)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Unicode Tools
@@ -51,48 +56,6 @@ jobs:
         run: MAVEN_OPTS="-ea" mvn -s .github/workflows/mvn-settings.xml exec:java -Dexec.mainClass="org.unicode.text.UCD.Main"  -Dexec.args="version 15.0.0 build MakeUnicodeFiles"  -pl unicodetools  -DCLDR_DIR=$(cd ../cldr ; pwd)  -DUNICODETOOLS_GEN_DIR=$(cd Generated; pwd)  -DUNICODETOOLS_REPO_DIR=$(pwd)  -DUVERSION=15.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # https://github.com/unicode-org/unicodetools/blob/main/docs/emoji/aac.md#aacorderjava
-      - name: Run command - AAC Order
-        run: MAVEN_OPTS="-ea" mvn -s .github/workflows/mvn-settings.xml exec:java -Dexec.mainClass="org.unicode.tools.AacOrder" -pl unicodetools  -DCLDR_DIR=$(cd ../cldr ; pwd)  -DUNICODETOOLS_GEN_DIR=$(cd Generated; pwd)  -DUNICODETOOLS_REPO_DIR=$(pwd)  -DUVERSION=15.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # https://github.com/unicode-org/unicodetools/blob/main/docs/uca/index.md#tools--tests
-      # Note: Not running desuffixucd.py in UCA jobs because no version numbers detected in data file names
-      - name: Run command - UCA - collation validity log
-        run: |
-          # invoke main() in class ...UCA.Main
-          MAVEN_OPTS="-ea" mvn -s .github/workflows/mvn-settings.xml exec:java -Dexec.mainClass="org.unicode.text.UCA.Main"  -Dexec.args="writeCollationValidityLog"  -DUVERSION=15.0.0  -pl unicodetools  -DCLDR_DIR=$(cd ../cldr ; pwd)  -DUNICODETOOLS_GEN_DIR=$(cd Generated; pwd)  -DUNICODETOOLS_REPO_DIR=$(pwd)
-          # check for output file
-          compgen -G "Generated/UCA/*/CheckCollationValidity.html"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # TODO: file issue to uncomment, debug errors, and fix?
-      # - name: Run command - UCA - for CLDR & ICU
-      #   run: |
-      #     # invoke main() in class ...UCA.Main
-      #     MAVEN_OPTS="-ea" mvn -s .github/workflows/mvn-settings.xml exec:java -Dexec.mainClass="org.unicode.text.UCA.Main"  -Dexec.args="ICU"  -DUVERSION=15.0.0  -pl unicodetools  -DCLDR_DIR=$(cd ../cldr ; pwd)  -DUNICODETOOLS_GEN_DIR=$(cd Generated; pwd)  -DUNICODETOOLS_REPO_DIR=$(pwd)
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # TODO: file issue to uncomment, debug errors, and fix. Stacktrace observed:
-      # java.lang.AbstractMethodError: Receiver class org.unicode.cldr.util.props.UnicodePropertySymbolTable$ComparisonMatcher does not define or inherit an implementation of the resolved method 'abstract boolean matches(java.lang.Object)' of interface com.ibm.icu.dev.util.CollectionUtilities$ObjectMatcher.
-      #     at org.unicode.cldr.util.props.UnicodeProperty.getSet (UnicodeProperty.java:366)
-      #     at org.unicode.cldr.util.props.UnicodeProperty.getSet (UnicodeProperty.java:327)
-      # ... 
-      #
-      # https://github.com/unicode-org/unicodetools/blob/main/docs/idna.md
-      # - name: Run command - IDNA
-      #   run: |
-      #     # Confirm that the directory for the bin files exists
-      #     compgen -G "Generated/BIN"
-      #     # "Delete all the bin files" as per instructions
-      #     rm -rf Generated/BIN/*
-      #     # run GenerateIdna
-      #     MAVEN_OPTS="-ea" mvn -s .github/workflows/mvn-settings.xml exec:java -Dexec.mainClass="org.unicode.idna.GenerateIdna" -Dexec.args="" -pl unicodetools  -DCLDR_DIR=$(cd ../cldr ; pwd)  -DUNICODETOOLS_GEN_DIR=$(cd Generated; pwd)  -DUNICODETOOLS_REPO_DIR=$(pwd)  -DUVERSION=15.0.0
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   out-of-source-build:
     name: Out-of-source Instructions
