--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -12,7 +12,7 @@ jobs:
 
   # Only run 1 or 2 commands for in-source build instructions, just to demonstrate
   # what translating between an out-of-source build and an in-source build would
-  # would look like. Rely on out-of-source build steps as the canonical way to
+  # look like. Rely on out-of-source build steps as the canonical way to
   # execute tools in CI and write corresponding documentation.
   in-source-build:
     name: In-source Instructions (Examples)
